name:                roc-cluster-demo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ncrashed/roc-cluster-demo#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable roc-cluster-demo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
